@@ -31,6 +31,7 @@
 
 /* AIX 5.1 and Solaris 10 declare ioctl() in <unistd.h> and in <stropts.h>,
    but not in <sys/ioctl.h>.
+   Haiku declares ioctl() in <unistd.h>, but not in <sys/ioctl.h>.
    But avoid namespace pollution on glibc systems.  */
 #ifndef __GLIBC__
 # include <unistd.h>
